--- a/sales.html
+++ b/sales.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>
+        Pat's Salmon Cookies
+
+    </title>
 </head>
 <body>
+    <h1>
+        Pat's Salmon Cookies
+    </h1>
+    <div id="Salmon">
+        <!-- generate this from js: -->
+        <!-- <article>
+          <h2></h2>
+          <p></p>
+          <ul>
+            <li></li>
+          </ul>
+          <img src="">
+        </article> -->
+      </div>
     <script src="js/app.js"></script>
 </body>
 </html>
