--- a/sales.html
+++ b/sales.html
@@ -27,6 +27,7 @@
           <img src="">
         </article> -->
       </div>
+      <a href="index.html"> Back to Home </a>
     <script src="js/app.js"></script>
 </body>
 </html>
