--- a/index.html
+++ b/index.html
@@ -1,15 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-        <!-- Pat's Salmon Cookies -->
+        Pat's Salmon Cookies
     </title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Kiwi+Maru&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/reset.css"> -->
+    <link rel="stylesheet" href="css/style2.css">
 </head>
+
 <body>
     <header>
+
+        <h1>
+            Pat's Salmon Cookies
+        </h1>
+        <img id="im1" src="img/an.png" alt="salmoo img" width="900" height="250px">
+        <nav>
+            <ul>
+                <li><a href="sales.html"> Our sales
+
+                    </a><a href=""> About us
+
+                    </a><a href="">Connect us
+
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
     </header>
+
+<main>
+    <p>
+        Where you can find us? You can scroll down and you can find our location &#128508;
+    </p>
+    <div>
+        <p>
+            Just visit us to have enjoy with the most delicious cookie in the world &#127850; </p>
+        <img src="img/fish.jpg" width="422px" height="400px" alt="cookie">
+        <img src="img/frosted-cookie.jpg" width="422px" height="400px" alt="cookie">
+    </div>
+    <div>
+        <p>
+            It's made with love &#128149; and you can share them with your family with love &#128106; &#128149;
+        </p>
+        <img src="img/family.jpg" alt="">
+    </div>
+    <section id="left">
+        <p>
+            Don't forget to buy our cutter and T-shirt from our stores
+        </p>
+        <img src="img/shirt.jpg " width="150px" height="150px"> <img src="img/cutter.jpeg" width="150px" height="150px">
+    </section>
+    <p>
+    <div style="width: 100%"><iframe width="100%" height="600"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=tokyo+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+            href="https://www.maps.ie/route-planner.htm">Road Trip Planner</a></div>
+    Dubai <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=dubai+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+            href="https://www.maps.ie/route-planner.htm">Plan A Journey</a></div>
+    Lima <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=lima+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+            href="https://www.maps.ie/route-planner.htm">Google Route Planner</a></div>
+    Seattle <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=Seattle+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+            href="https://www.maps.ie/route-planner.htm">Plan A Journey</a></div>
+    Paris <div style="width: 100%"><iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0"
+            marginwidth="0"
+            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=paris+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+            href="https://www.maps.ie/route-planner.htm">Google Route Planner</a></div>
+    </p>
+
+</main>
+<footer>
+    &copy; 2021 
+    <img src="img/chinook.jpg" alt="salmoo img" width="1500" height="350px">
+</footer>
 </body>
 </html>
