--- a/sales.html
+++ b/sales.html
@@ -1,24 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <title>
-        Pat's Salmon Cookies
 
-    </title>
-    <link rel="stylesheet" href="css/style.css">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>
+    Pat's Salmon Cookies
+
+  </title>
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
+
 <body>
+  <header>
+
+    <img src="img/an.png" alt="">
     <h1>
-        Pat's Salmon Cookies
+      Pat's Salmon Cookies
     </h1>
-    <div id="Salmon">
-        <!-- generate this from js: -->
-        <!-- <article>
+    <a href="index.html"> Back to Home </a>
+  </header>
+
+  <form action="" id="fish">
+    <fieldset>
+      <label for="nameLocation">Name of Location</label>
+      <input type="text" id="nameLocation" name="nameLocation">
+
+      <br>
+      <br>
+      <label for="max1">Put the maximum</label>
+      <input type="number" id="max1" name="max1" >
+      <br>
+      <br>
+      <label for="min1">Put the minimum</label>
+      <input type="number" id="min1" name="min1" >
+      <br>
+      <br>
+      <label for="avg1">Put the Average</label>
+      <input type="number" id="avg1" name="avg1" step="0.1">
+      <br>
+      <br>
+
+      <input type="submit">
+    </fieldset>
+  </form>
+  <br>
+  <br>
+  <br>
+  <br>
+  <div id="Salmon">
+    <!-- generate this from js: -->
+    <!-- <article>
           <h2></h2>
           <p></p>
           <ul>
@@ -26,8 +61,12 @@
           </ul>
           <img src="">
         </article> -->
-      </div>
-      <a href="index.html"> Back to Home </a>
-    <script src="js/app.js"></script>
+  </div>
+  <br>
+  <br> 
+
+
+  <script src="js/app.js"></script>
 </body>
+
 </html>
